[gd_scene load_steps=3 format=3 uid="uid://dtm8d3ehd1jp0"]

[ext_resource type="Script" uid="uid://draidam64328" path="res://Scripts/MenuScripts/pause_screen.gd" id="1_8qml2"]
[ext_resource type="StyleBox" uid="uid://bc0qkcohnagp" path="res://Resources/Styles/label_style.tres" id="2_x2cxh"]

[node name="PauseScreen" type="CanvasLayer" node_paths=PackedStringArray("ObjectiveLabel")]
process_mode = 3
script = ExtResource("1_8qml2")
ObjectiveLabel = NodePath("ColorRect/VBoxContainer/ObjectiveLabel")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ObjectiveLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Objective"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = ExtResource("2_x2cxh")
text = "Restart"

[node name="MenuButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = ExtResource("2_x2cxh")
text = "Main Menu"

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = ExtResource("2_x2cxh")
text = "Quit"

[connection signal="pressed" from="ColorRect/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
